--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -1,7 +1,169 @@
-body, html {
-    text-align: center;
+@import "_variables";
+
+a {
+  color: $main-dark;
 }
 
-main {
+body, html {
+  text-align: center;
+  background: $main-color;
+}
 
+header {
+  padding: 2em;
+
+  h1 {
+    display: inline-block;
+    border-bottom: 0.1em solid $main-dark;
+    padding-bottom: 0.2em;
+  }
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.3em;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn-default {
+  background: darken($main-color, 10);
+  color: $main-dark;
+  transition: all 0.3s ease;
+
+  &:hover,
+  &:active {
+    background: darken($main-color, 15);
+  }
+}
+
+#learn-content {
+  display: none;
+  margin: 1em .5em;
+  padding: 1em;
+  background: lighten($main-color, 30);
+  box-shadow: $main-shadow;
+
+  .guess {
+    margin: 2em auto;
+    max-width: 17em;
+
+    a.single-step-next {
+      display: none;
+
+      &:after {
+        display: inline-block;
+        content: '';
+        width: 0;
+        height: 0;
+        border-top: .4em solid transparent;
+        border-bottom: .4em solid transparent;
+        border-left: .5em solid $main-dark;
+        margin-left: .2em;
+      }
+    }
+
+    button#guess {
+      transition: background-color 0.3s linear;
+
+      svg {
+        width: 1.5em;
+        position: absolute;
+        top: 0.45em;
+        right: 1.5em;
+
+        .circ {
+          opacity: 0;
+          stroke-dasharray: 130;
+          stroke-dashoffset: 130;
+          -webkit-transition: all 1s;
+          -moz-transition: all 1s;
+          -ms-transition: all 1s;
+          -o-transition: all 1s;
+          transition: all 1s;
+        }
+      }
+
+      .tick, .cross {
+        stroke-dasharray: 50;
+        stroke-dashoffset: 50;
+        -webkit-transition: stroke-dashoffset 1s 0.5s ease-out;
+        -moz-transition: stroke-dashoffset 1s 0.5s ease-out;
+        -ms-transition: stroke-dashoffset 1s 0.5s ease-out;
+        -o-transition: stroke-dashoffset 1s 0.5s ease-out;
+        transition: stroke-dashoffset 1s 0.5s ease-out;
+      }
+
+      &.btn-success {
+        &:focus {
+          background-color: #5cb85c;
+          border-color: #5cb85c;
+          color: white;
+          box-shadow: none;
+        }
+
+        .circ, .tick {
+          opacity: 1;
+          stroke-dashoffset: 0;
+        }
+      }
+
+      &.btn-danger {
+        &:focus {
+          background-color: #d9534f;
+          border-color: #d9534f;
+          color: white;
+          box-shadow: none;
+        }
+
+        .circ, .cross {
+          opacity: 1;
+          stroke-dashoffset: 0;
+        }
+      }
+
+      &:disabled {
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+ul.learn-steps {
+  padding: 0;
+  list-style: none;
+
+  li.learn-step-item {
+    box-shadow: $main-shadow;
+    background: white;
+    margin: 0 .5em;
+    padding: 0;
+
+    a {
+      display: block;
+      min-height: 12em;
+      padding: 1em;
+      position: relative;
+
+      &:hover,
+      &:active,
+      &:focus {
+        text-decoration: none;
+        color: inherit;
+        box-shadow: 0 0 3px darken($main-color, 20) inset;
+      }
+
+      .bottom {
+        position: absolute;
+        bottom: 2em;
+        width: 80%;
+        left: 10%;
+      }
+    }
+  }
 }
